fix font path for jpackage